--- a/liftdplus-web/package.json
+++ b/liftdplus-web/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export -o _static"
+    "lint": "next lint"
   },
   "dependencies": {
     "react": "^19.0.0",
