--- a/liftdplus-web/package.json
+++ b/liftdplus-web/package.json
@@ -25,5 +25,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "23.x",
+    "pnpm": "9.12.x"   
   }
 }
