--- a/liftdplus-web/package.json
+++ b/liftdplus-web/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.5.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
